refactoring and first unit test
