# src/main/java/com/example/servicemanagement/dtos/RequestSpDto.java
@@ -1,11 +1,13 @@
 package com.example.servicemanagement.dtos;
 
+import lombok.Builder;
 import lombok.Getter;
 import lombok.Setter;
 
 @Getter
 @Setter
-public class RequestSPDto {
+@Builder
+public class RequestSpDto {
     private String name;
     private String address;
     private String phoneNo;
